--- a/docs/06_pytorch_transfer_learning.ipynb
+++ b/docs/06_pytorch_transfer_learning.ipynb
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<torch.utils.data.dataloader.DataLoader at 0x7fee094e6dc0>,\n",
-       " <torch.utils.data.dataloader.DataLoader at 0x7fee094e67c0>,\n",
+       "(<torch.utils.data.dataloader.DataLoader at 0x7f5d201ee820>,\n",
+       " <torch.utils.data.dataloader.DataLoader at 0x7f5d20237fa0>,\n",
        " ['apple',\n",
        "  'banana',\n",
        "  'beef',\n",
@@ -84,7 +84,7 @@
        "  'strawberries'])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        ")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,77 +626,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 20%|██        | 1/5 [00:02<00:09,  2.48s/it]"
+      " 20%|██████████▊                                           | 1/5 [00:02<00:09,  2.46s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 1 | train_loss: 1.9464 | train_acc: 0.4379 | test_loss: 1.3973 | test_acc: 0.7552\n"
+      "Epoch: 1 | train_loss: 1.8854 | train_acc: 0.5072 | test_loss: 1.3689 | test_acc: 0.8125\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 40%|████      | 2/5 [00:04<00:06,  2.27s/it]"
+      " 40%|█████████████████████▌                                | 2/5 [00:04<00:05,  1.98s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 2 | train_loss: 1.2162 | train_acc: 0.7912 | test_loss: 0.9931 | test_acc: 0.8125\n"
+      "Epoch: 2 | train_loss: 1.1764 | train_acc: 0.8276 | test_loss: 1.0145 | test_acc: 0.8229\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 60%|██████    | 3/5 [00:06<00:04,  2.21s/it]"
+      " 60%|████████████████████████████████▍                     | 3/5 [00:05<00:03,  1.84s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 3 | train_loss: 0.8517 | train_acc: 0.8540 | test_loss: 0.7805 | test_acc: 0.8906\n"
+      "Epoch: 3 | train_loss: 0.8214 | train_acc: 0.8659 | test_loss: 0.7632 | test_acc: 0.8698\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 80%|████████  | 4/5 [00:08<00:02,  2.22s/it]"
+      " 80%|███████████████████████████████████████████▏          | 4/5 [00:07<00:01,  1.77s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 4 | train_loss: 0.6407 | train_acc: 0.8846 | test_loss: 0.6374 | test_acc: 0.8542\n"
+      "Epoch: 4 | train_loss: 0.6256 | train_acc: 0.9062 | test_loss: 0.6190 | test_acc: 0.8646\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:11<00:00,  2.22s/it]"
+      "100%|██████████████████████████████████████████████████████| 5/5 [00:09<00:00,  1.82s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 5 | train_loss: 0.5433 | train_acc: 0.8984 | test_loss: 0.6578 | test_acc: 0.8333\n"
+      "Epoch: 5 | train_loss: 0.5076 | train_acc: 0.9196 | test_loss: 0.6438 | test_acc: 0.8333\n"
      ]
     },
     {
@@ -745,10 +745,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO Extensions + Exercises\n",
+    "## TK - Extensions + Exercises\n",
     "* Try a different model from PyTorch pretrained models\n",
     "* Train for longer, what happens?\n",
-    "* Could you add in some data augmentation? What happens then?"
+    "* Could you add in some data augmentation? What happens then?\n",
+    "\n",
+    "## TK - Extra-curriculum\n",
+    "* Check out the PyTorch multi-weights API (still in beta at time of writing, March 2022) - https://pytorch.org/blog/introducing-torchvision-new-multi-weight-support-api/"
    ]
   },
   {
@@ -762,7 +765,7 @@
    "hash": "3fbe1355223f7b2ffc113ba3ade6a2b520cadace5d5ec3e828c83ce02eb221bf"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.7 64-bit (conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -777,9 +780,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
