--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -2879,7 +2879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2895,7 +2895,7 @@
        " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2921,12 +2921,12 @@
     "> \n",
     "> So if you want to convert your NumPy array (float64) -> PyTorch tensor (float64) -> PyTorch tensor (float32), you can use `tensor = torch.from_numpy(array).type(torch.float32)`.\n",
     "\n",
-    "Because we reassigned `tensor` above, if you change the tensor, the array stays the same."
+    "torch.from_mumpy() creates a tensor that shares the data with the numpy array"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2938,18 +2938,54 @@
     {
      "data": {
       "text/plain": [
-       "(array([2., 3., 4., 5., 6., 7., 8.]),\n",
-       " tensor([1., 2., 3., 4., 5., 6., 7.], dtype=torch.float64))"
+       "(array([123.,   3.,   4.,   5.,   6.,   7.,   8.]),\n",
+       " tensor([123.,   3.,   4.,   5.,   6.,   7.,   8.], dtype=torch.float64))"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Change the array, keep the tensor\n",
-    "array = array + 1\n",
+    "array += 1\n",
+    "tensor[0] = 123\n",
+    "\n",
+    "array, tensor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Note:** However, that the type conversion will create a  copy of the tensor, disconnecting it from the numpy array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([3., 4., 5., 6., 7., 8., 9.]),\n",
+       " tensor([123.,   2.,   3.,   4.,   5.,   6.,   7.]))"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = np.arange(1.0, 8.0)\n",
+    "tensor = torch.from_numpy(array).type(torch.float32)\n",
+    "\n",
+    "array += 1\n",
+    "tensor[0] = 123\n",
+    "array += 1\n",
+    "\n",
     "array, tensor"
    ]
   },
@@ -2964,7 +3000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -2980,7 +3016,7 @@
        " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2998,12 +3034,12 @@
     "id": "Dt8yEV1jMfi2"
    },
    "source": [
-    "And the same rule applies as above, if you change the original `tensor`, the new `numpy_tensor` stays the same."
+    "And the same rule applies as above, if you change the original `tensor`, the new `numpy_tensor` will change too."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -3016,17 +3052,17 @@
      "data": {
       "text/plain": [
        "(tensor([2., 2., 2., 2., 2., 2., 2.]),\n",
-       " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+       " array([2., 2., 2., 2., 2., 2., 2.], dtype=float32))"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Change the tensor, keep the array the same\n",
-    "tensor = tensor + 1\n",
+    "tensor += 1\n",
     "tensor, numpy_tensor"
    ]
   },
@@ -3743,11 +3779,8 @@
    "provenance": [],
    "toc_visible": true
   },
-  "interpreter": {
-   "hash": "3fbe1355223f7b2ffc113ba3ade6a2b520cadace5d5ec3e828c83ce02eb221bf"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.13 ('pytorch-fast')",
    "language": "python",
    "name": "python3"
   },
@@ -3761,7 +3794,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "94de073e944942fa1c32cf12eb54153b9048edec3d632aef5c8248dface03d67"
+   }
   }
  },
  "nbformat": 4,
