--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -1658,6 +1658,7 @@
     "\n",
     "# Create X and y (features and labels)\n",
     "X = torch.arange(start, end, step).unsqueeze(dim=1) # without unsqueeze, errors will happen later on (shapes within linear layers)\n",
+    "# Y_i=f(X_i, \beta)+e_i",
     "y = weight * X + bias \n",
     "X[:10], y[:10]"
    ]
