--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -220,6 +220,7 @@
     "end = 1\n",
     "step = 0.02\n",
     "X = torch.arange(start, end, step).unsqueeze(dim=1)\n",
+    "#Y_i=f(X_i, \beta)+e_i",
     "y = weight * X + bias\n",
     "\n",
     "X[:10], y[:10]"
