--- a/docs/00_pytorch_fundamentals.ipynb
+++ b/docs/00_pytorch_fundamentals.ipynb
@@ -2468,7 +2468,7 @@
     "id": "YxnqDBlpDDJ_"
    },
    "source": [
-    "If we wanted to stack our new tensor on top of itself five times, we could do so with `torch.stack()`."
+    "If we wanted to stack our new tensor on top of itself four times, we could do so with `torch.stack()`."
    ]
   },
   {
