Fixing grammatical error
There were two English grammatical errors that I noticed while reading the written tutorial, which I have fixed in this commit.

--- a/02_pytorch_classification/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification/02_pytorch_classification.ipynb
@@ -862,6 +862,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "MiRHq9mxFIf-"
@@ -871,7 +872,7 @@
     "\n",
     "`nn.Sequential` is fantastic for straight-forward computations, however, as the namespace says, it *always* runs in sequential order.\n",
     "\n",
-    "So if you'd something else to happen (rather than just straight-forward sequential computation) you'll want to define your own custom `nn.Module` subclass.\n",
+    "So if you'd want to do something else to happen (rather than just straight-forward sequential computation) you'll want to define your own custom `nn.Module` subclass.\n",
     "\n",
     "Now we've got a model, let's see what happens when we pass some data through it."
    ]
@@ -932,6 +933,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "8aoQn39pHC7_"
@@ -949,7 +951,7 @@
     "\n",
     "However, the same optimizer function can often be used across different problem spaces.\n",
     "\n",
-    "For example, the stochastic gradient descent optimizer (SGD, `torch.optim.SGD()`) can be used for a range of problems, so can too the Adam optimizer (`torch.optim.Adam()`). \n",
+    "For example, the stochastic gradient descent optimizer (SGD, `torch.optim.SGD()`) can be used for a range of problems, so can the Adam optimizer (`torch.optim.Adam()`). \n",
     "\n",
     "| Loss function/Optimizer | Problem type | PyTorch Code |\n",
     "| ----- | ----- | ----- |\n",
