--- a/02_pytorch_classification/02_pytorch_classification.ipynb
+++ b/02_pytorch_classification/02_pytorch_classification.ipynb
@@ -872,7 +872,7 @@
     "\n",
     "`nn.Sequential` is fantastic for straight-forward computations, however, as the namespace says, it *always* runs in sequential order.\n",
     "\n",
-    "So if you'd want to do something else to happen (rather than just straight-forward sequential computation) you'll want to define your own custom `nn.Module` subclass.\n",
+    "So if you'd want something else to happen (rather than just straight-forward sequential computation) you'll want to define your own custom `nn.Module` subclass.\n",
     "\n",
     "Now we've got a model, let's see what happens when we pass some data through it."
    ]
