--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -1910,6 +1910,7 @@
     "You can create your own matrix multiplication visuals like this at http://matrixmultiplication.xyz/.\n",
     "\n",
     "> **Note:** A matrix multiplication like this is also referred to as the [**dot product**](https://www.mathsisfun.com/algebra/vectors-dot-product.html) of two matrices.\n",
+    ">  Refer to this excellent course to learn more about matrix multiplication https://www.khanacademy.org/math/linear-algebra\n",
     "\n"
    ]
   },
