--- a/00_pytorch_fundamentals.ipynb
+++ b/00_pytorch_fundamentals.ipynb
@@ -1046,32 +1046,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 24,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "q3MoGnpw9XaF",
-        "outputId": "4155e2ac-82ec-4aad-cc85-f82f5a761ac9"
+        "outputId": "ee77ba56-a3e8-4b74-f296-eb317c329272"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(torch.Size([3]), torch.float16, device(type='cpu'))"
+              "(torch.Size([3]), torch.float32, device(type='cpu'))"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 24
         }
       ],
       "source": [
         "# Default datatype for tensors is float32\n",
         "float_32_tensor = torch.tensor([3.0, 6.0, 9.0],\n",
-        "                               dtype=torch.float16, # defaults to None, which is torch.float32 or whatever datatype is passed\n",
-        "                               device=None, # defaults to None, which uses the default tensor type\n",
-        "                               requires_grad=False) # if True, operations performed on the tensor are recorded\n",
+        "                               dtype=None, # defaults to None, which is torch.float32 or whatever datatype is passed\n",
+        "                               device=None, # defaults to None, which uses the default tensor type . \"cpu\", \"cuda\"\n",
+        "                               requires_grad=False) # if True, operations performed on the tensor are recorded. Whether or not to track gradients with this tensors operations\n",
         "\n",
         "float_32_tensor.shape, float_32_tensor.dtype, float_32_tensor.device"
       ]
@@ -1095,24 +1095,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PKSuajld_09s",
-        "outputId": "cbac29d9-3371-4fe1-b47c-3af4623b5fbf"
+        "outputId": "d0359ea4-5f8d-4de6-fd4d-edbc4b997a26"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "torch.float16"
             ]
           },
-          "execution_count": 21,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 22
         }
       ],
       "source": [
@@ -1120,6 +1120,33 @@
         "                               dtype=torch.float16) # torch.half would also work\n",
         "\n",
         "float_16_tensor.dtype"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = float_32_tensor * float_16_tensor\n",
+        "result.shape, result.dtype, result.device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lLbbZS_aWIFM",
+        "outputId": "dbbf2e15-21ae-4ffb-8229-4abd8dc81e39"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(torch.Size([3]), torch.float32, device(type='cpu'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
       ]
     },
     {
