done exercise 00_pytorch_fundamentals_exercises.ipynb

--- a/extras/exercises/00_pytorch_fundamentals_exercises.ipynb
+++ b/extras/exercises/00_pytorch_fundamentals_exercises.ipynb
@@ -1,24 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "00_pytorch_fundamentals_exercises.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AzDBM_v4iMe7"
+      },
       "source": [
         "# 00. PyTorch Fundamentals Exercises\n",
         "\n",
@@ -28,69 +14,102 @@
         "  * The documentation on [`torch.Tensor`](https://pytorch.org/docs/stable/tensors.html#torch-tensor).\n",
         "  * The documentation on [`torch.cuda`](https://pytorch.org/docs/master/notes/cuda.html#cuda-semantics).\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "AzDBM_v4iMe7"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# No code solution (reading)"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "bGD0oD8Kizak"
       },
-      "execution_count": 1,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# No code solution (reading)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 2. Create a random tensor with shape `(7, 7)`.\n"
-      ],
       "metadata": {
         "id": "__iXqqz-ioUJ"
-      }
+      },
+      "source": [
+        "### 2. Create a random tensor with shape `(7, 7)`.\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Import torch\n",
-        "\n",
-        "\n",
-        "# Create random tensor\n"
-      ],
+      "execution_count": 2,
       "metadata": {
         "id": "6pUq9Dc8i2L7"
       },
-      "execution_count": 2,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "torch.Size([7, 7])"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Import torch\n",
+        "import torch\n",
+        "\n",
+        "# Create random tensor\n",
+        "tensor = torch.rand(7,7)\n",
+        "tensor.shape"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 3. Perform a matrix multiplication on the tensor from 2 with another random tensor with shape `(1, 7)` (hint: you may have to transpose the second tensor)."
-      ],
       "metadata": {
         "id": "9-XxvRLfiqkR"
-      }
+      },
+      "source": [
+        "### 3. Perform a matrix multiplication on the tensor from 2 with another random tensor with shape `(1, 7)` (hint: you may have to transpose the second tensor)."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Create another random tensor\n",
-        "\n",
-        "# Perform matrix multiplication \n"
-      ],
+      "execution_count": 6,
       "metadata": {
         "id": "NcLqR0Sbi_vT"
       },
-      "execution_count": 3,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[2.3265, 1.4151, 1.4595, 1.1784, 1.1547, 1.6001, 2.2779],\n",
+              "        [2.0068, 1.2557, 1.2311, 1.2165, 0.7891, 1.6724, 1.3459],\n",
+              "        [1.5602, 1.3609, 0.9012, 0.9696, 0.7927, 1.2862, 1.6487],\n",
+              "        [2.3357, 1.1354, 1.5744, 1.2045, 1.4957, 1.7178, 2.3303],\n",
+              "        [2.9000, 1.9628, 1.8961, 1.9873, 1.8628, 2.4410, 2.9073],\n",
+              "        [2.4596, 1.3890, 1.6925, 1.5321, 1.3406, 1.7228, 2.1988],\n",
+              "        [1.4818, 1.3307, 0.8560, 1.3905, 0.9151, 1.0858, 2.1017]])"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Create another random tensor\n",
+        "tensor2 = torch.rand(7,7)\n",
+        "\n",
+        "# Perform matrix multiplication \n",
+        "tensor_mult = torch.matmul(tensor, tensor2)\n",
+        "tensor @ tensor2"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "eiutdKUFiryU"
+      },
       "source": [
         "### 4. Set the random seed to `0` and do 2 & 3 over again.\n",
         "\n",
@@ -104,51 +123,81 @@
         "         [2.5290],\n",
         "         [1.7989]]), torch.Size([7, 1]))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "eiutdKUFiryU"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set manual seed\n",
-        "\n",
-        "\n",
-        "# Create two random tensors\n",
-        "\n",
-        "\n",
-        "# Matrix multiply tensors\n"
-      ],
+      "execution_count": 15,
       "metadata": {
         "id": "D-lOWI_1jRMm"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(tensor([[0.6397],\n",
+              "         [0.1109]]),\n",
+              " torch.Size([2, 1]))"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Set manual seed\n",
+        "RANDOM_SEED = 0\n",
+        "torch.manual_seed(seed=RANDOM_SEED)\n",
+        "\n",
+        "# Create two random tensors\n",
+        "t1 = torch.rand(2,2)\n",
+        "t2 = torch.rand(1,2)\n",
+        "\n",
+        "# Matrix multiply tensors\n",
+        "tm = t1 @ t2.T\n",
+        "tm, tm.shape"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ezY6ks9Cis37"
+      },
       "source": [
         "### 5. Speaking of random seeds, we saw how to set it with `torch.manual_seed()` but is there a GPU equivalent? (hint: you'll need to look into the documentation for `torch.cuda` for this one)\n",
         "  * If there is, set the GPU random seed to `1234`."
-      ],
-      "metadata": {
-        "id": "ezY6ks9Cis37"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set random seed on the GPU\n"
-      ],
+      "execution_count": 27,
       "metadata": {
         "id": "_LKWcfSTjp00"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "cuda\n"
+          ]
+        }
+      ],
+      "source": [
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "print(device)\n",
+        "\n",
+        "# Set random seed on the GPU\n",
+        "if torch.cuda.is_available():\n",
+        "    torch.cuda.manual_seed(RANDOM_SEED)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Ir9qSaj6it4n"
+      },
       "source": [
         "\n",
         "### 6. Create two random tensors of shape `(2, 3)` and send them both to the GPU (you'll need access to a GPU for this). Set `torch.manual_seed(1234)` when creating the tensors (this doesn't have to be the GPU random seed). The output should be something like:\n",
@@ -160,29 +209,52 @@
         " tensor([[0.0518, 0.4681, 0.6738],\n",
         "         [0.3315, 0.7837, 0.5631]], device='cuda:0'))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "Ir9qSaj6it4n"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set random seed\n",
-        "\n",
-        "\n",
-        "# Check for access to GPU\n",
-        "\n",
-        "# Create two random tensors on GPU\n"
-      ],
+      "execution_count": 31,
       "metadata": {
         "id": "azXExiFZj5nm"
       },
-      "execution_count": 6,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "device: (True, 'cuda')\n",
+            "tensor([[0.2820, 0.3742, 0.0237],\n",
+            "        [0.4910, 0.1235, 0.1143]], device='cuda:0') cuda:0\n",
+            "tensor([[0.4725, 0.5751, 0.2952],\n",
+            "        [0.7967, 0.1957, 0.9537]], device='cuda:0') cuda:0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Set random seed\n",
+        "\n",
+        "torch.cuda.manual_seed(1234)\n",
+        "\n",
+        "# Check for access to GPU\n",
+        "\n",
+        "print(f\"device: {torch.cuda.is_available(), device}\")\n",
+        "\n",
+        "# Create two random tensors on GPU\n",
+        "\n",
+        "t11 = torch.rand(2,3)\n",
+        "t12 = torch.rand(2,3)\n",
+        "t11_gpu = t11.to(device)\n",
+        "t12_gpu = t12.to(device)\n",
+        "\n",
+        "print(t11_gpu, t11_gpu.device)\n",
+        "print(t12_gpu, t12_gpu.device)"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5TlAxeiSiu1y"
+      },
       "source": [
         "\n",
         "### 7. Perform a matrix multiplication on the tensors you created in 6 (again, you may have to adjust the shapes of one of the tensors).\n",
@@ -192,69 +264,113 @@
         "(tensor([[0.3647, 0.4709],\n",
         "         [0.5184, 0.5617]], device='cuda:0'), torch.Size([2, 2]))\n",
         "```"
-      ],
-      "metadata": {
-        "id": "5TlAxeiSiu1y"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Perform matmul on tensor_A and tensor_B\n"
-      ],
+      "execution_count": 43,
       "metadata": {
         "id": "fAeG7ox0lHEO"
       },
-      "execution_count": 7,
-      "outputs": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "tensor([[0.5244, 0.2583, 0.5515],\n",
+              "        [0.2751, 0.2393, 0.2282],\n",
+              "        [0.1023, 0.0360, 0.1160]], device='cuda:0')"
+            ]
+          },
+          "execution_count": 43,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "# Perform matmul on tensor_A and tensor_B\n",
+        "\n",
+        "t11m = torch.mm(t11_gpu.T, t12_gpu)\n",
+        "t11m"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 8. Find the maximum and minimum values of the output of 7."
-      ],
       "metadata": {
         "id": "G7qfa5CSivwg"
-      }
+      },
+      "source": [
+        "### 8. Find the maximum and minimum values of the output of 7."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Find max\n",
-        "\n",
-        "# Find min\n"
-      ],
+      "execution_count": 44,
       "metadata": {
         "id": "Fu8_3mZpllOd"
       },
-      "execution_count": 8,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Maximum: 0.5515242218971252\n",
+            "Minimum: 0.03600599616765976\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Find max\n",
+        "t11m_max = torch.max(t11m)\n",
+        "print(f\"Maximum: {t11m_max}\")\n",
+        "\n",
+        "# Find min\n",
+        "t11m_min = torch.min(t11m)\n",
+        "print(f\"Minimum: {t11m_min}\")"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### 9. Find the maximum and minimum index values of the output of 7."
-      ],
       "metadata": {
         "id": "wrTj5FgNiw47"
-      }
+      },
+      "source": [
+        "### 9. Find the maximum and minimum index values of the output of 7."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Find arg max\n",
-        "\n",
-        "\n",
-        "# Find arg min\n"
-      ],
+      "execution_count": 46,
       "metadata": {
         "id": "CCEKt4K2lsfQ"
       },
-      "execution_count": 9,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[0.5244, 0.2583, 0.5515],\n",
+            "        [0.2751, 0.2393, 0.2282],\n",
+            "        [0.1023, 0.0360, 0.1160]], device='cuda:0')\n",
+            "Arg max: 2\n",
+            "Arg min: 7\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Find arg max\n",
+        "print(t11m)\n",
+        "\n",
+        "print(f\"Arg max: {torch.argmax(t11m)}\")\n",
+        "\n",
+        "# Find arg min\n",
+        "print(f\"Arg min: {torch.argmin(t11m)}\")"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hmeybz4uixy7"
+      },
       "source": [
         "\n",
         "### 10. Make a random tensor with shape `(1, 1, 1, 10)` and then create a new tensor with all the `1` dimensions removed to be left with a tensor of shape `(10)`. Set the seed to `7` when you create it and print out the first tensor and it's shape as well as the second tensor and it's shape.\n",
@@ -267,30 +383,74 @@
         "tensor([0.5349, 0.1988, 0.6592, 0.6569, 0.2328, 0.4251, 0.2071, 0.6297, 0.3653,\n",
         "        0.8513]) torch.Size([10])\n",
         "```"
-      ],
-      "metadata": {
-        "id": "hmeybz4uixy7"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Set seed\n",
-        "\n",
-        "\n",
-        "# Create random tensor\n",
-        "\n",
-        "\n",
-        "# Remove single dimensions\n",
-        "\n",
-        "\n",
-        "# Print out tensors and their shapes\n"
-      ],
+      "execution_count": 49,
       "metadata": {
         "id": "TQ9zbRzVl1jV"
       },
-      "execution_count": 10,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tensor([[[[0.8823, 0.9150, 0.3829, 0.9593, 0.3904, 0.6009, 0.2566, 0.7936,\n",
+            "           0.9408, 0.1332]]]]) torch.Size([1, 1, 1, 10])\n",
+            "tensor([0.8823, 0.9150, 0.3829, 0.9593, 0.3904, 0.6009, 0.2566, 0.7936, 0.9408,\n",
+            "        0.1332]) torch.Size([10])\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Set seed\n",
+        "RANDOM_SEED = 42\n",
+        "torch.manual_seed(RANDOM_SEED)\n",
+        "\n",
+        "# Create random tensor\n",
+        "t3 = torch.rand(1,1,1,10)\n",
+        "\n",
+        "# Remove single dimensions\n",
+        "t3_sq = torch.squeeze(t3)\n",
+        "\n",
+        "# Print out tensors and their shapes\n",
+        "print(t3, t3.shape)\n",
+        "print(t3_sq, t3_sq.shape)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "00_pytorch_fundamentals_exercises.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.6"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
