--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -487,13 +487,11 @@
     {
      "data": {
       "text/plain": [
-       "[Parameter containing:\n",
-       " tensor([0.3367], requires_grad=True),\n",
-       " Parameter containing:\n",
-       " tensor([0.1288], requires_grad=True)]"
+       "Parameter containing:\n",
+       "tensor([0.3367], requires_grad=True)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
