fix typo error in exercise 01

--- a/extras/exercises/01_pytorch_workflow_exercises.ipynb
+++ b/extras/exercises/01_pytorch_workflow_exercises.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "Glu2fM4dkNlx"
       },
@@ -42,7 +42,7 @@
               "'2.3.0+cu118'"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "LqKhXY26m31s"
       },
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 4,
       "metadata": {
         "id": "KbDG5MV7jhvE"
       },
@@ -145,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 6,
       "metadata": {
         "id": "GlwtT1djkmLw"
       },
@@ -153,12 +153,12 @@
       "source": [
         "# Split the data into training and testing\n",
         "from sklearn.model_selection import train_test_split\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.20, random_state=42)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 7,
       "metadata": {
         "id": "29iQZFNhlYJ-"
       },
@@ -194,7 +194,7 @@
         "\n",
         "  if predictions is not None:\n",
         "    # Plot the predictions in red (predictions were made on the test data)\n",
-        "    plt.scatter(test_data, predictions, c=\"r\", s=4, label=\"Predictions\")\n",
+        "    plt.scatter(test_data, predictions, c=\"r\", s=4, marker='s', label=\"Predictions\")\n",
         "\n",
         "  # Show the legend\n",
         "  plt.legend(prop={\"size\": 14});\n",
