--- a/01_pytorch_workflow.ipynb
+++ b/01_pytorch_workflow.ipynb
@@ -1379,6 +1379,8 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## Only model parameters\n",
+        "\n",
         "### Save\n",
         "`torch.save(model.state_dict(), PATH)`\n",
         "\n",
@@ -1386,12 +1388,23 @@
         "\n",
         "`model = TheModelClass(*args, **kwargs)`  \n",
         "`model.load_state_dict(torch.load(PATH))`  \n",
-        "`model.eval()`  "
+        "`model.eval()`  \n",
+        "\n",
+        "## The entire model\n",
+        "\n",
+        "### Save\n",
+        "\n",
+        "`torch.save(model, PATH)`\n",
+        "\n",
+        "### Load\n",
+        "\n",
+        "`model = torch.load(PATH)`  \n",
+        "`model.eval()`"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 313,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1405,6 +1418,17 @@
           "output_type": "stream",
           "text": [
             "Saving model to: models\\01_pytorch_workflow_model_0.pth\n"
+          ]
+        },
+        {
+          "ename": "NameError",
+          "evalue": "name 'torch' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[1], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# 3. Save the model state dict\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSaving model to: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mMODEL_SAVE_PATH\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241m.\u001b[39msave(obj\u001b[38;5;241m=\u001b[39mmodel_0\u001b[38;5;241m.\u001b[39mstate_dict(), \u001b[38;5;66;03m# only saving the state_dict() only saves the models learned parameters\u001b[39;00m\n\u001b[0;32m     14\u001b[0m            f\u001b[38;5;241m=\u001b[39mMODEL_SAVE_PATH)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'torch' is not defined"
           ]
         }
       ],
